--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,4 +157,17 @@
         app:layout_constraintStart_toEndOf="@+id/btn2_hp_mas"
         app:layout_constraintTop_toBottomOf="@+id/flecha2" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toStartOf="@+id/btn2_vn_menos"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toEndOf="@+id/btn2_vn_mas"
+        app:layout_constraintTop_toBottomOf="@+id/text2_hp"
+        app:srcCompat="@android:drawable/ic_media_rew" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
